# credit_risk2605

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: .gitignore  credit_risk_prepared.csv.dvc
notebooks/: eda.ipynb  model.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: prepare_data.py
